--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.10.2",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
@@ -33,26 +34,27 @@
     "cheerio": "0.22.0",
     "compression": "^1.7.4",
     "cross-env": "3.1.3",
-    "css-loader": "0.25.0",
-    "eslint": "3.8.1",
+    "css-loader": "^3.2.0",
+    "eslint": "4.18.2",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-watch": "2.1.14",
+    "eslint-watch": "^6.0.1",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "1.0.1",
-    "html-webpack-plugin": "2.22.0",
+    "hoek": ">=4.2.1",
+    "html-webpack-plugin": "^3.2.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "^0.4.7",
     "json-server": "^0.15.1",
-    "localtunnel": "1.8.1",
-    "mocha": "3.1.2",
-    "nock": "8.1.0",
+    "localtunnel": "^2.0.0",
+    "mocha": "^6.2.1",
+    "nock": "^11.3.5",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
     "numeral": "1.5.3",
-    "open": "0.0.5",
+    "open": "6.0.0",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
-    "webpack": "1.13.2",
+    "webpack": "^4.41.0",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.0",
     "webpack-md5-hash": "0.0.5"
