--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "eslint-watch": "^6.0.1",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "1.0.1",
-    "hoek": ">=4.2.1",
+    "hoek": "^6.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "https-proxy-agent": "^2.2.0",
     "jsdom": "9.8.0",
     "json-schema-faker": "^0.4.7",
     "json-server": "^0.15.1",
     "localtunnel": "^2.0.0",
     "mocha": "^6.2.1",
+    "moment": "^2.19.3",
     "nock": "^11.3.5",
     "npm-run-all": "3.1.1",
     "nsp": "2.6.2",
